--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>API WARS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+{% extends "layout.html" %}
 
-</head>
-<body>
-    <div class="pill-nav">
-      <a class="active" href="#planet-list">Planet list</a>
-      <a href="#login">Login</a>
-      <a href="#logout">Logout</a>
-<!--      <a href="#vote">Vote</a>-->
-    </div>
+{% block content %}
 
-    <h1>API WARS</h1>
+<p>{{ login_message }}</p>
+
+
+    <p> {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+
     <p>ddddddddd
     ddddddddddddddd<br><br><br><br><br><br><br><br><br>fffffffffffffffffffffffffff
         ffffff<br><br><br><br><br><br><br><br><br>ffffffffffffffffffffffffffffffffffffff<br><br><br><br><br><br>
 
     ddddddddddddddddd<br><br><br><br><br><br><br><br><br><br><br><br><br>ddddddddddddddddddddddddddd</p>
-    {% extends "footer.html" %}
-</body>
+{% endblock %}
