--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,16 @@
+{% extends "layout.html" %}
 
-<h1>API WARS</h1>
+{% block content %}
+<h1>Login </h1>
+    <form action="/login" method="POST">
 
-<div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-</div>
+        Username:<br>
+        <input type="text" name="user_name" required></input><br>
+        Password:<br>
+        <input type="password" name="password" required></input><br>
+        <button type="submit">Login</button>
+
+        <p>{{ login_message }}</p>
+
+    </form>
+{% endblock %}
