--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-</body>
-</html>
+{% block content %}
+
+    <h1>Register Form</h1>
+    <form action="/register" method="POST">
+
+        Username:<br>
+        <input type="text" name="user_name" required></input><br>
+        Name and Surname:<br>
+        <input type="text" name="name" required></input><br>
+        Email:<br>
+        <input type="text" name="email" required></input><br>
+        Password:<br>
+        <input type="password" name="password" required></input><br>
+        Repeat Password:<br>
+        <input type="password" name="repeat password" required></input><br>
+        <br>
+        <button type="submit">Register</button>
+
+        <p>{{ pass_message }}{{ register_message }}</p>
+    </form>
+{% endblock %}
