--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,24 @@
         {% endif %}
     {% endwith %}
 
-    <p>ddddddddd
-    ddddddddddddddd<br><br><br><br><br><br><br><br><br>fffffffffffffffffffffffffff
-        ffffff<br><br><br><br><br><br><br><br><br>ffffffffffffffffffffffffffffffffffffff<br><br><br><br><br><br>
+<button type="submit" value="Previous">Previous</button>
+<button type="submit" value="Next">Next</button>
 
-    ddddddddddddddddd<br><br><br><br><br><br><br><br><br><br><br><br><br>ddddddddddddddddddddddddddd</p>
+<table class="table table-hover table-dark">
+    <thead>
+    <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Diameter</th>
+        <th scope="col">Climate</th>
+        <th scope="col">Terrain</th>
+        <th scope="col">Surface water</th>
+        <th scope="col">Population</th>
+        <th scope="col">Residents</th>
+    </tr>
+    </thead>
+    <tbody id="tbody">
+
+    </tbody>
+</table>
+
 {% endblock %}
