--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>API WARS</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <script src="{{ url_for('static', filename='js/scripts.js') }}" defer></script>
 
 </head>
 <body>
