--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
         {% endif %}
     {% endwith %}
 
-<button type="submit" value="Previous">Previous</button>
-<button type="submit" value="Next">Next</button>
+<button type="submit" id="Previous">Previous</button>
+<button type="submit" id="Next">Next</button>
 
 <table class="table table-hover table-dark">
     <thead>
